@@ -1,3 +1,8 @@
+2005-08-08  Paolo Borelli  <pborelli@katamail.com>
+
+	gedit-mdi-child.c: fix runtime warning due to recent-files api
+	breakage.
+
 2005-08-05  Paolo Maggi  <paolo@gnome.org>
 
 	Fixed bug #101281: [ui-review] Undo preference dialog
